@@ -26,6 +26,8 @@ documents those changes that are of interest to users and admins.
  -- Modify select/linear and select/cons_res to use resources released via job
     resizing.
  -- Added to contribs foundation for Perl extension for slurmdb library.
+ -- Modify time parsing logic to accept "minute", "hour", "day", and "week" in
+    addition to the currently accepted "minutes", "hours", etc.
 
 * Changes in SLURM 2.2.0.pre4
 =============================
